Fix button vertical alignment

--- a/resources/a2_styling.css
+++ b/resources/a2_styling.css
@@ -77,6 +77,9 @@ nav img {
 }
 
 .button {
+	margin-left: 		5px;
+	margin-right:		5px;
+	vertical-align: 	top;
 	width: 				200px;
 	height:				200px;
 	background-color: 	transparent;	
@@ -87,23 +90,6 @@ nav img {
 }
 
 .button:hover {
-	background-color: 	#006600;
-	color:				#ffffff;
-}
-
-.button_central {
-	margin-left: 		15px;
-	margin-right:		15px;
-	width: 				200px;
-	height:				200px;
-	background-color: 	transparent;	
-	color: 				black;
-	border: 			2px solid;
-	border-radius: 		8px;
-	font-size: 			20px;
-}
-
-.button_central:hover {
 	background-color: 	#006600;
 	color:				#ffffff;
 }
